--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,33 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Moment 3 - DT173G</title>
 </head>
+
 <body>
-    <h1>Test</h1>
-    
+    <div class="bigcircle"></div>
+    <div class="smallcircle"></div>
+    <img src="#" alt="">
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Startsida</a></li>
+                <li><a href="#">Våra tjänster</a></li>
+                <li><a href="#">Om oss</a></li>
+                <li><a href="#">Hitta hit</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="cta">
+        <div>
+            <h1>Hallå där!</h1>
+            <h2>undrar du varför det sitter en <span>kanin</span> där?</h2>
+        </div>
+        <button>Klicka på den här knappen</button>
+    </section>
+
     <script src="js/main.js"></script>
 </body>
+
 </html>
