Lagt till animeringar, skapat JavaScript-funktionalitet för att byta bakgrundsbild

--- a/pub/index.html
+++ b/pub/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="bigcircle"></div>
     <div class="smallcircle"></div>
-    <img src="#" alt="">
+    <img src="images/rabbit.jpg" alt="Kanin mot gul bakgrund med solglasögon" class="backgroundimg" id="backgroundimg">
+    <button class="darkmodebtn">
+        
+        <img src="images/light.svg" alt="" class="darkmodeicon"></button>
 
     <header>
         <nav>
@@ -28,10 +31,10 @@
 
     <section class="cta">
         <div>
-            <h1>Hallå där!</h1>
+            <h1>Hejsan!</h1>
             <h2>undrar du varför det sitter en <span>kanin</span> där?</h2>
         </div>
-        <button>Klicka på den här knappen</button>
+        <button class="ctabtn" onclick="changeAnimal()">Klicka på den här knappen</button>
     </section>
 
     <script src="js/main.js"></script>
