--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,20 @@
 </head>
 
 <body>
-    <div class="bigcircle"></div>
-    <div class="smallcircle"></div>
+    <div class="bigcircle" id="bigcircle"></div>
+    <div class="smallcircle" id="smallcircle"></div>
     <img src="images/rabbit.jpg" alt="Kanin mot gul bakgrund med solglasögon" class="backgroundimg" id="backgroundimg">
-    <button class="darkmodebtn">
-        
+    <button class="darkmodebtn" onclick="darkMode()">
         <img src="images/light.svg" alt="" class="darkmodeicon"></button>
 
+
     <header>
-        <nav>
-            <ul>
+        <nav id="mainnav">
+            <button id="menubtn" onclick="toggleMenu()">
+                <img src="images/menu.svg" alt="" id="menuicon">
+            </button>
+
+            <ul id="mainnavul">
                 <li><a href="#">Startsida</a></li>
                 <li><a href="#">Våra tjänster</a></li>
                 <li><a href="#">Om oss</a></li>
@@ -31,10 +35,12 @@
 
     <section class="cta">
         <div>
-            <h1>Hejsan!</h1>
-            <h2>undrar du varför det sitter en <span>kanin</span> där?</h2>
+            <h1 id="ctah1">Hejsan!</h1>
+            <h2 id="ctah2">undrar du varför det är en <span id="animalspan">kanin</span> där?</h2>
         </div>
-        <button class="ctabtn" onclick="changeAnimal()">Klicka på den här knappen</button>
+        <button class="ctabtn" id="ctabtn" onclick="changeAnimal()">
+            <img src="images/change.svg" alt="">
+            Tryck här för att ändra</button>
     </section>
 
     <script src="js/main.js"></script>
