Anpassat menyn för mörkt/ljust läge

--- a/pub/index.html
+++ b/pub/index.html
@@ -24,11 +24,11 @@
             </button>
 
             <ul id="mainnavul">
-                <li><a href="#">Startsida</a></li>
-                <li><a href="#">Våra tjänster</a></li>
-                <li><a href="#">Om oss</a></li>
-                <li><a href="#">Hitta hit</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="#" class="menuitem">Startsida</a></li>
+                <li><a href="#" class="menuitem">Våra tjänster</a></li>
+                <li><a href="#" class="menuitem">Om oss</a></li>
+                <li><a href="#" class="menuitem">Hitta hit</a></li>
+                <li><a href="#" class="menuitem">Kontakt</a></li>
             </ul>
         </nav>
     </header>
