--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,16 @@
 </head>
 
 <body>
+    <!--Bakgrundselement-->
     <div class="bigcircle" id="bigcircle"></div>
     <div class="smallcircle" id="smallcircle"></div>
     <img src="images/rabbit.jpg" alt="Kanin mot gul bakgrund med solglasögon" class="backgroundimg" id="backgroundimg">
+
+    <!--Knapp för mörkt läge-->
     <button class="darkmodebtn" onclick="darkMode()">
         <img src="images/light.svg" alt="" class="darkmodeicon"></button>
 
-
+    <!--Sidhuvud med huvudmeny-->
     <header>
         <nav id="mainnav">
             <button id="menubtn" onclick="toggleMenu()">
@@ -33,6 +36,7 @@
         </nav>
     </header>
 
+    <!--Call-to-action-sektion-->
     <section class="cta">
         <div>
             <h1 id="ctah1">Hejsan!</h1>
@@ -43,6 +47,7 @@
             Tryck här för att ändra</button>
     </section>
 
+    <!--Länka till JavaScript-fil-->
     <script src="js/main.js"></script>
 </body>
 
